# quant-platform

./: .gitignore  CMakeLists.txt  Claude.md  CodexReviewer.md  OrchestratorAgent.md  README.md  USE_THESE_FILES.txt  review_with_codex.md  start_prompt.txt
.github/workflows/: deploy-quant-command-center-mobile.yml
QuantPlatform_USB/config/: app_config.json  optimizer_config.json  truth_engine_config.json
QuantPlatform_USB/data/schemas/: ohlcv_schema.json
app/: main.cpp
config/: execution_config.json
data/sample/: sample_ohlcv.csv
deploy/quant-command-center-mobile/: app.html.gz.b64.part-aa  app.html.gz.b64.part-ab  app.html.gz.b64.part-ac  app.html.gz.b64.part-ad  app.html.gz.b64.part-ae  app.html.gz.b64.part-af  index.html  index.xz.b64.part-aa  index.xz.b64.part-ab  index.xz.b64.part-ac  index.xz.b64.part-ad  index.xz.b64.part-ae  manifest.webmanifest  sw.js
examples/sample_runs/: README.md
examples/sample_strategy/: example_config.json
include/common/: config.h  logging.h  time_utils.h  types.h
include/core/: backtest_engine.h  commission_model.h  portfolio.h
include/execution/: order_manager.h  paper_broker.h  risk_manager.h
include/gui/: gui_app.h
include/io/: csv_reader.h  json_reader.h
include/metrics/: backtest_snapshot.h  metrics_engine.h
include/montecarlo/: monte_carlo.h
include/optimization/: bayesian_optimizer.h  gaussian_process.h  optimizer.h  param_space.h
include/reporting/: report_generator.h
include/review/: review_hook.h
include/strategy/: macd_strategy.h  rsi_strategy.h  signal.h  sma_crossover.h  strategy_base.h
include/truth/: truth_engine.h
include/walkforward/: walk_forward.h
installer/: setup.iss  setup.nsi
scripts/: build_windows_mingw.bat  build_windows_msvc.bat
src/common/: config.cpp  logging.cpp  time_utils.cpp  types.cpp
src/core/: backtest_engine.cpp  commission_model.cpp  portfolio.cpp
src/execution/: order_manager.cpp  paper_broker.cpp  risk_manager.cpp
src/gui/: gui_app.cpp
src/io/: csv_reader.cpp  json_reader.cpp
src/metrics/: metrics_engine.cpp
src/montecarlo/: monte_carlo.cpp
src/optimization/: bayesian_optimizer.cpp  gaussian_process.cpp  optimizer.cpp
src/reporting/: report_generator.cpp
src/review/: review_hook.cpp
src/strategy/: macd_strategy.cpp  rsi_strategy.cpp  signal.cpp  sma_crossover.cpp
src/truth/: truth_engine.cpp
src/walkforward/: walk_forward.cpp
